fixed the left align issue with the input

--- a/todo-app/src/app/app.component.css
+++ b/todo-app/src/app/app.component.css
@@ -10,6 +10,9 @@
   text-align: center;
 }
 .titleInput {
+  text-align: left;
+}
+::-webkit-input-placeholder {
   text-align: center;
 }
 .labelTitle {
